# sbf-binnen-prufung

./: .gitignore  LICENSE  README.md  fragenkatalog.txt  mapping.json  pyproject.toml
.github/workflows/: ci.yml
docs/: 02-setup-and-running.md  04-frontend.md
frontend/: README.md  capacitor.config.json  capacitor.config.ts  index.html  package-lock.json  package.json
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/example/sbfbinnen/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/scripts/: validateExamForms.mjs
frontend/src/: App.css  App.jsx  Question.js  Question.jsx  questions.json  questions_with_tips_and_explanations.json
frontend/src/__tests__/: app.behavior.test.jsx
frontend/src/components/: ConfirmExitDialog.jsx  ExamSelectorOverlay.jsx  ExamStatsPanel.jsx  HeaderBar.jsx  MenuModeCards.jsx  MenuPopover.jsx  MenuResume.jsx  ProgressStrip.jsx  SessionControls.jsx
frontend/src/data/: examForms.json  examModes.json  questionPools.json
frontend/src/utils/: examForms.js  questionImages.js  shuffleOptions.js
sbf_tools/: __init__.py  base_question.py  build_explanation_prompt.py  build_tip_prompt.py  enriched_question.py  generate_questions_json.py  get_completion_async.py  parse_questions.py  process_all_questions_async.py  process_question_async.py  read_text_file.py  write_json_file.py
tests/: test_generate_questions_json.py  test_parse_questions.py
tools/: explanation_giver.py  extract_question_images.py  parser.py
(+1 files in other folders)
