[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbf-binnen-tools"
version = "0.1.0"
description = "Tools for parsing and enriching SBF Binnen question catalog"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]
authors = [
  { name = "Koen Vannisselroij" }
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["sbf_tools"]

